[package]
name = "electrino0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip157-store = "0.4.1"
#bip157-store = { path = "../kyoto-store" }
bitcoin = "0.32.8"
hex-conservative = "0.3.2"
tokio = "1.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3"
